refactor : 게시판 중심 구조와 연계 흐름을 재구성
- command/query 분리와 컨트롤러 책임 재배치
- 이미지 저장소와 조회 모델, 통계 경계를 게시판 기준으로 정리
- 계정 감사와 북마크, 레시피 연동 코드의 리팩토링 부수 효과 반영